<resources>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="contenDescription">jaja</string>
    <string name="toolbar_title_fragment_breeds_list">Lista de razas</string>
    <string name="toolbar_title_fragment_detail_cat">Detalle de raza</string>
    <string name="generic_error">Ups! Hemos sufrido un error, pero ya es tarde para arreglarlo, no???? Mejor vamos a dormir XD! Vuelve en un rato</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="divide">Entre</string>
    <string name="multiply">Por</string>
    <string name="subtract">Menos</string>
    <string name="add">Más</string>
    <string name="equals">=</string>
    <string name="operator">Operador</string>
    <string name="titleToolbarCalculator">Calculadora</string>
    <string name="sendWhatsapp">Enviar Whatsapp</string>
    <string name="goToCatsActivity">Ir a la actividad de los gatos</string>
    <string name="goToCalculatorActivity">Ir a la actividad de la calculadora</string>
    <string name="goToBGGActivity">Ir a la actividad de la bgg</string>
    <string name="goToCoroutines">Ir a la actividad de coroutines</string>
    <string name="toolbarDistributive">¿A dónde vamos?</string>
    <string name="toolbarListUsersBGG">Listado de usuarios BGG</string>
    <string name="add_user">añadir usuario bgg</string>
    <string name="toolbarBGG">Cotilleando en la BGG</string>
    <string name="bggAddUserHintName">Nombre</string>
    <string name="bggAddUserButton">Añadir</string>
    <string name="bggAddUserHintEmail">Email</string>
    <string name="bggAddUserHintPrefix">Prefijo país ejemplo, 34</string>
    <string name="bggAddUserHintPhone">Teléfono móvil</string>
    <string name="bggAddUserHintUserBGG">Usuario BGG *</string>
    <string name="bggAddUserLimitMinUsername">Para añadir un nuevo usuario al menos tiene que tener nombre de usuario de la bgg</string>
    <string name="toolbarListBoardGamesBGG">Listado de juegos</string>
    <string name="toolbarDetailThingBGG">Detalle</string>
    <string name="bggDetailThingBGGTitleOtherNames">Otros Nombres:</string>
    <string name="bggDetailThingBGGTitleDescription">Descripción:</string>
    <string name="loading">Cargando</string>
    <string name="bgg_config_list_show_title">Mostrar</string>
    <string name="bgg_config_list_show_all">Todos</string>
    <string name="bgg_config_list_show_board_game_basic">Juegos Base</string>
    <string name="bgg_config_list_show_expansion">Expansiones</string>
    <string name="toolbar_title_fragment_list_things_all">Juegos y Expansiones</string>
    <string name="toolbar_title_fragment_list_things_boardgames">Juegos</string>
    <string name="toolbar_title_fragment_list_things_expansions">Expansiones</string>
    <string name="calculatorGoToDetail">Vista detalle</string>
    <string name="toast">Testeando un toast</string>
    <string name="languageDependence">Dependencia idioma: </string>
    <string name="launchIntent">Lanzar Intent</string>
</resources>